--- a/src/Components/CheckOut/CheckOut.css
+++ b/src/Components/CheckOut/CheckOut.css
@@ -6,6 +6,13 @@
   padding: 5px
 }
 
+.form-all-group {
+  display: flex;
+  flex-direction: wrap;
+  margin: 5px;
+  padding: 5px
+}
+
 .lab-check {
   display: flex;
   justify-content: center;
